# sol-test-plugin

./: Cargo.toml  README.md
src/: accounts_selector.rs  lib.rs  plugin.rs  transaction_selector.rs
