[package]
name = "syn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-accountsdb-plugin-interface = "1.8.2"
log = "*"
bs58 = "*"
serde = "1.0.131"
serde_derive = "1.0.103"
serde_json = "1.0.72"
solana-sdk = "*"
solana-program = "*"
solana-logger = "*"
solana-measure = "*"
solana-metrics = "*"
